# libcommon-c

./: CMakeLists.txt  build.sh
common/: CMakeLists.txt  block.c  block.h  buffer.c  buffer.h  common.hpp  log.c  log.h  mem.h  str.c  str.h
common/test/: CMakeLists.txt  test-buffer.c  test-log.c  test-str.c
